Bug 940642 - IonMonkey: Incorrect result for multiplication when also calling imul. r=h4writer